# vacancies_database

./: .gitignore  README.md  database.example.ini  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_config_py.html  z_145eef247bfb46b6_database_filling_py.html  z_145eef247bfb46b6_db_manager_py.html  z_145eef247bfb46b6_headhunter_api_py.html
src/: config.py  database_filling.py  db_manager.py  headhunter_api.py  parser.py  saver.py
tests/: conftest.py  test_config.py  test_database_filling.py  test_db_manager.py  test_headhunter_api.py
